# wize-mini-ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
custom_components/wyze_mini_ha/: __init__.py  config_flow.py  manifest.json  sensor.py  switch.py  wyze_api.py  wyze_sync.py
custom_components/wyze_mini_ha/translations/: en.json  es.json
